<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">XMPP</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    
    
    <!--
    <string name="server_name">shinelon-pc</string>
    <string name="server_ip">192.168.1.12</string>
    <string name="server_altport">5222</string>
    
    <string name="username">xu1</string>
    <string name="password">123</string>
    -->
    
    
    
    
    <string name="default_username">xu123</string>
    <string name="default_password">123</string>
    
    
    <string name="server_name1">shinelon-pc</string>
    <string name="server_ip1">10.3.93.207</string>
    
    
    
    <string name="status">在线</string>
    
    
    <string name="strInputAccHint">输入帐号</string>
    <string name="strAccInputLabel">帐号</string>
    <string name="strPswInputLabel">密码</string>
    <string name="opt_auto_login">记住密码</string>
    <string name="login">登 录</string>
    <string name="opt_hideLogin">隐身登录</string>
    <string name="opt_silent">静音登录</string>
    <string name="opt_openVibra">开启振动</string>
    <string name="opt_acceptGroupMsg">接收群消息</string>
    <string name="opt_newuser">新用户</string>
    <string name="opt_setting">设置</string>
    
    <string name="login_input_register">注册</string>
    <string name="login_input_username_empty">用户名输入为空!</string>
    <string name="login_input_password_empty">密码输入为空!</string>
    <string name="login_input_password_not_equal">两次密码输入不一致!</string>
    <string name="login_input_password_too_short">密码至少输入%1$d位</string>
    <string name="login_input_nickname_empty">昵称输入为空!</string>
    <string name="login_input_server_name_empty">服务器名称输入为空!</string>
    <string name="login_input_server_ip_empty">服务器IP地址输入为空!</string>
    <string name="login_input_server_port_empty">服务器端口地址输入为空!</string>
    <string name="chat_input_empty">内容输入为空!</string>
   

</resources>
